# cudafea

./: .gitignore  Cmakelists.txt  Commands.h  Commands.hpp  Common.h  Common.hpp  Constraint.cpp  Constraint.h  Constraint.hpp  Element.cpp  Element.h  Element.hpp  GradientMatrix.cpp  GradientMatrix.h  GradientMatrix.hpp  IntegrationMatrix.cpp  IntegrationMatrix.h  IntegrationMatrix.hpp  LocalStiffnessMatrix.cpp  LocalStiffnessMatrix.h  LocalStiffnessMatrix.hpp  Material.cpp  Material.h  Material.hpp  Node.cpp  Node.h  Node.hpp  PropertyMatrix.cpp  PropertyMatrix.h  PropertyMatrix.hpp  README.md  VFEModel.cpp  VFEModel.h  VFEModel.hpp  main.cpp  start.bat  vFESolver.cpp  vFESolver.h  vFESolver.hpp
Math/: BiCGSTABSolver.cpp  BiCGSTABSolver.hpp  Matrix.cpp  Matrix.hpp  Solver.cpp  Solver.hpp  Vector.cpp  Vector.hpp
cudaCore/: BICGSTAB.cuh  BiCGSTAB.cu  CMakeLists.txt
